# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2136 2012/01/16 12:33:24 jp Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta5 ????-??-??
 - 2012-01-16 Creation of QueueObject was not possible because of missing EncodeObject in CustomerUserGenericTicket.pm

3.1.0.beta4 2012-01-17
 - 2012-01-12 Fixed bug#8107 - Ticket state is not set as default on ticket edit screens.
 - 2012-01-12 Fixed bug#8105 - Changing Priority does not update all relevant SysConfig fields.
 - 2012-01-11 Dramatically improved HTML rendering performance for pages with a large
    amount of data, thanks to Stefan Bedorf!
 - 2012-01-11 Fixed bug#8103 - Edit screens does not get Dynamic Field values from selected ticket.
 - 2012-01-11 Fixed bug#8070 - Configured year ranges do not apply for date DynamicFields.
 - 2012-01-11 Updated CPAN module YAML to version 0.78.
 - 2012-01-11 Updated CPAN module Net::IMAP::Simple to version 1.20271.
 - 2012-01-11 Updated CPAN module LWP::UserAgent to version 6.03.
 - 2012-01-11 Updated CPAN module Digest::SHA::PurePerl to version 5.70.
 - 2012-01-11 Updated CPAN module CGI to version 3.59.
 - 2012-01-10 Fixed bug#8095 - Dashboard ticket list does not support DynamicFields.
 - 2012-01-10 Ticket search and ticket link should require at least one search parameter.
 - 2012-01-09 Improved consistency of ChallengeToken checks in the agent and admin interface.
 - 2012-01-03 Updated Serbian translation, thanks to Milorad Jovanovic!
 - 2011-12-23 Fixed bug#8052 - ACLs code is called even when there is no defined ACL or ACL module.
 - 2011-12-23 Fixed bug#8037 - Registration screen in web installer produces HTTP 500 error.
 - 2011-12-22 Fixed bug#7947 - Service list can be made useless with simple ACL and/or disabling